--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
 				<ul id="accesskeys">
 					<li><a href="#menu" accesskey="m">Accès menu (accesskey m)</a></li>
 					<li><a href="#principal" accesskey="p">Accès contenu principal (accesskey p)</a></li>
-					<li>(TODO: ajouter des liens vers vos sous parties si vous le souhaitez)</li>
 				</ul>
 			</div>
 			<div id="content">
 				<h2>Résumé</h2>
-				<p>Modèles de représentation des connaissances, fondés sur une 
-					description graphique des variables aléatoires</p>
+				<p>Crée à la fin des années 1980, les réseaux bayésiens sont des systèmes d’analyse qui se basent les travaux du mathématicien Thomas Bayes ; plus particulièrement à son théorème de « probabilité des causes. Présentés sous forme d’un modèle graphique probabiliste acyclique, les réseaux bayésiens représentent  des événements aléatoires et permettent de décrire l’incertitude des faits qu’ils engendrent. Leur domaine d’utilisation est varié. Dans le domaine médical, on utilise ces réseaux pour faire des diagnostics, en se basant sur des cas précédent. Dans l’industrie, ils sont utilisés pour connaître les causes possibles d’un dysfonctionnement d’un système électronique. Durant un procès, les juges peuvent utiliser ce type d’analyse pour les aider à la décision par rapport aux preuves, témoignages…</p>
 
 				<h2>Préambules</h2>
 				<p>Un réseau bayésien est en informatique et en statistique un modèle graphique probabiliste représentant des variables aléatoires sous la forme d'un graphe orienté acyclique. Intuitivement, ils sont à la fois :</p>
