--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 
 
 				<h2>Conclusion</h2>
+				<p>En conclusion, un réseau bayésien se définit par la représentation de  différents événements  à travers un graphe acyclique orienté et par le calcul rapide des probabilités respectives.  La dépendance des variables caractérise ce type de réseau et est primordiale.  D’autre part ces dépendances permettent de générer directement un échantillon réaliste. Enfin, les réseaux bayésiens ont plusieurs domaines d’application dans l’industrie , la finance …</p>
 				<h2>Utilisation des réseaux bayésiens</h2>
 
 				<p>Il existe de nombreux domaine ou les réseaux bayésiens sont utilisés. Que ce soit dans le domaine de la médecine, de l’industrie, des finances et du droit. Nous allons prendre des exemples dans l’industrie et le droit.</p>
@@ -313,6 +314,7 @@
 					<li><a href="http://www.utas.edu.au/__data/assets/pdf_file/0011/588467/TR_9_BNs_for_Integrated_Catchment_Management.pdf">A beginners guide to Bayesian network modelling for integrated catchment management</a></li>
 					<li><a href="http://www-old.enit.fr/perso/francois/index/Recherche/Recherche_personnelle/Documents%20PDF%20enseignement/bayes.pdf">Enit Bayes</a></li>
 					<li><a href="http://www.egc.asso.fr/sdoc-101-egc08_tutoriel_reseaux_bayesiens.pdf">tutoriel réseau Bayésiens</a></li>
+					<li><a href="http://www.police-scientifique.com/interpretation-de-la-preuve-et-theoreme-de-bayes/">Interprétation de la preuve et théorème de Bayes</a></li>
 				</ul>
 			</div>
 		</main>
