Crtique's part finished

--- a/index.html
+++ b/index.html
@@ -284,24 +284,16 @@
 					<li> Il existe des outils visuels d'aide à la décision;</li>
 					<li> L'apprentissage est possible avec des données incomplètes et permet d'intégrer des connaissances hétérogènes;</li>
 					<li> Le modèle est évolutif et accepte l'ajout de nouvelles données;</li>
-
-
-					<li> La base de données relativement riche pour l’apprentissage;)</li>
-					<li> La représentation des connaissances par liens entre causes et effets est souvent plus naturelle que la représentation par règles de production</li>
-					<li> La représentation des connaissances est assez lisible (par opposition aux réseaux de neurones par exemple, ou aux arbres de décision</li>
-					<li> Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...)</li>
+					<li> Les types d'inférences réalisables à partir de la représentation sont très variés (diagnostic, effets, analyse de sensibilité, ...).</li>
 				</ul>
 				<h3>Limites</h3>
 				<ul>
 					<li> Il est peut s'avérer difficile d'être d'accord avec les experts concernant la structure du réseau bayésien;</li>
 					<li> La table de probabilité conditionnelle est compliquée à définir avec l'avis de l'expert; </li>
+					<li> Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité;</li>
 					<li> Il existe un problème de représentation des variables continues, en effet car les probabilités sont discrètes et non continues;</li>
 					<li> Le modèle ne tient pas compte d'un temps ou d'un espace dynamique;</li>
 					<li> Il n'existe pas de boucles de rétroaction.</li>
-
-					<li> L'utilisation des probabilités et leur donnée par l'expert sont problématiques</li>
-					<li> La complexité des algorithmes peut parfois poser problème</li>
-					<li> Les tables de probabilité d’un noeud croient exponentiellement avec  le nombre de ses parents et leur nombre de modalité.</li>
 				</ul>
 
 				<h2>Bibliographie</h2>
